2013-04-07  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* colours_pal.c: More accurate emulation of PAL colours based on analysis of
  oscillograms of PAL GTIA output.

* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
  for the cartridge mapping used by "Turbo Hit"/"Atari Blizzard Hit".

* memory.h: Fix gcc 4.7.2 -Wstrict-aliasing warnings.

* cartridge.[ch], ui.c, android/jni/jni.c: Avoid compiler warnings by moving
  the table of cartridge names to jni.c. The default target doesn't need that
  table anyway, it only needs the names.

* cartridge.c: Fix uninitialised variable which could result in unnecessary
  bank switching.


2013-03-21  Petr Stehlik <pstehlik@sophics.cz>
* configure.c, ui.c, atari_rpi.c, gles/video.c: committing new support
  for Raspberry Pi made by Andrey Dj

* DOC/README.RPI, DOC/BUILD.RPI: documentation added


** 3.0.0 released on 2013-03-03

2013-03-03  Petr Stehlik <pstehlik@sophics.cz>
* DOC/ChangeLog, DOC/NEWS: updated for new release

* README.1ST, atari800.spec, DOC/README, atari.h, atari800.man, configure.ac,
  util/export: version++

* emuos.c, emuos.lis: extended copyleft

* debian/{chaneglog, control, rules}: updates from the official Debian
  package merged with updates for a new release


2013-02-09  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/INSTALL, DOC/PORTING, DOC/README: Rename the "basic" version to "simple"
  in the docs, to avoid confusion with the Atari BASIC and with the "basic"
  target - there's no such target anymore.

* debian/control, DOC/INSTALL, DOC/INSTALL.dos, DOC/INSTALL.falcon,
  DOC/README, DOC/readme.html.in, src/atari800.man, atari800.spec, README.1ST:
  Update docs to inlcude the 1200XL and the XEGS as emulated systems.

* DOC/INSTALL.falcon: Update after renaming --disable-sound to --without-sound.

* DOC/README, DOC/NEWS: Updated with all my contributions since 2.2.1.


2013-01-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>